<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Suchary</string>

    <!-- Activities -->
    <string name="title_activity_main">Suchary</string>
    <string name="title_activity_search">Szukaj</string>
    <string name="in_favorites">W ulubionych</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="title_activity_about">O aplikacji</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Otwórz boczny panel</string>
    <string name="navigation_drawer_close">Zamknij boczny panel</string>
    <string name="section_new">Najnowsze</string>
    <string name="section_starred">Ulubione</string>
    <string name="section_random">Losowe</string>
    <string name="navigation_drawer_settings">Ustawienia</string>
    <string name="navigation_drawer_about">O aplikacji</string>

    <!-- Action Bar -->
    <string name="action_settings">Ustawienia</string>
    <string name="search_title">Szukaj</string>
    <string name="search_hint">Szukaj suchara</string>
    <string name="search_hint_starred">Szukaj suchara w ulubionych</string>

    <!-- Preferences -->
    <string name="pref_notif_title">Powiadomienia</string>
    <string name="pref_notif">Powiadomienia</string>
    <string name="pref_notif_summ">Powiadamiaj o nowych sucharach</string>
    <string name="pref_ringtone">Dźwięk powiadomienia</string>
    <string name="pref_vibration">Wibracje</string>
    <string name="pref_notif_color">Kolor diody powiadomień</string>
    <string name="pref_notif_test">Testuj powiadomienie</string>
    <string name="pref_view_title">Wygląd</string>
    <string name="pref_theme_color">Wybierz motyw</string>
    <string name="pref_navbar_color">Koloruj pasek nawigacyjny</string>
    <string name="pref_admin_title">Zarządzanie danymi</string>
    <string name="pref_reset">Ściągnij ponownie wszystkie suchary</string>
    <string name="pref_reset_summ">Informacja o ulubionych sucharach zostanie zachowana</string>
    <string name="no_network_reset">Aby ponownie ściągnąć wszystkie suchary musi być połączenie z internetem.</string>

    <!-- Card expand -->
    <string name="joke_star">Ulubiony</string>
    <string name="joke_share">Udostępnij</string>
    <string name="joke_source">Źródło</string>

    <!-- Notification -->
    <plurals name="new_joke_notification">
        <item quantity="one">Nowy suchar</item>
        <item quantity="few">%d nowe suchary</item>
        <item quantity="other">%d nowych sucharów</item>
    </plurals>
    <string name="test_notification_title">Test</string>
    <string name="test_notification_body">To jest powiadomienie testowe</string>
    <string name="test_notification_dialog_title">Test powiadomienia</string>
    <string name="test_notification_dialog_body">Testowe powiadomienie zostanie pokazane po wyłączeniu ekranu</string>

    <string name="new_joke_notification_summary">Oraz %1$d więcej</string>

    <!-- Main activity -->
    <string name="no_network">Brak połączenie z internetem</string>
    <string name="no_network_first_download">Przy pierwszym uruchomieniu wszystkie suchary muszą być pobrane z serwera. Nawiąż połączenie z internetem i uruchom aplikację ponownie.</string>
    <string name="download_jokes_progress_title">Pobieranie sucharów</string>
    <plurals name="total_joke_count">
        <item quantity="zero">%d dowcipów</item>
        <item quantity="one">%d dowcip</item>
        <item quantity="two">%d dowcipy</item>
        <item quantity="few">%d dowcipy</item>
        <item quantity="many">%d dowcipów</item>
        <item quantity="other">%d dowcipów</item>
    </plurals>
    <plurals name="starred_joke_count">
        <item quantity="zero">%d ulubionych</item>
        <item quantity="one">%d ulubiony</item>
        <item quantity="two">%d ulubione</item>
        <item quantity="few">%d ulubione</item>
        <item quantity="many">%d ulubionych</item>
        <item quantity="other">%d ulubionych</item>
    </plurals>

    <!-- Override CardsLib defaults -->
    <string name="list_card_undo_title">Cofnij</string>

    <plurals name="list_card_undo_items">
        <item quantity="one">Usunięto suchar z ulubionych</item>
        <item quantity="few">Usunięto %d suchary z ulubionych</item>
        <item quantity="other">Usunięto %d sucharów z ulubionych</item>
    </plurals>

    <!-- Override Color Picker defaults -->
    <string name="color_picker_default_title">Wybierz kolor</string>

    <!-- All -->
    <string name="no_internet_connection">Brak połączenia z internetem</string>

    <!-- Starred -->
    <string name="no_starred">Nie masz żadnych ulubionych sucharów. Wróć i zaznacz te, które ci się podobają.</string>
    <string name="no_starred_image">Brak ulubionych sucharów</string>
    <string name="action_shuffle">Mieszaj</string>


    <!-- About -->
    <string name="about_application_title">Aplikacja</string>
    <string name="about_application">Aplikacja wyświetla suchary pobrane z różnych miejsc w internecie, z każdego można przejść do oryginalnego linku. Baza sucharów jest aktualizowana automatycznie, wystarczy aktywne połączenie z internetem. Wersja przeglądarkowa znajduje się na: <a href="http://suchary.jakubchmura.pl">http://suchary.jakubchmura.pl</a></string>
    <string name="about_author_title">Autor</string>
    <string name="about_author"><a href="mailto:android@jakubchmura.pl?subject=Suchary">Jakub Chmura</a></string>
    <string name="about_libraries_title">Biblioteki opensource</string>
    <string name="about_libraries">&#8226; <a href="https://github.com/gabrielemariotti/cardslib">Cardslib</a>\n&#8226; <a href="https://github.com/keyboardsurfer/Crouton">Crouton</a>\n&#8226; <a href="https://github.com/HeinrichReimer/material-drawer">material-drawer</a></string>

    <!-- Global -->
    <string name="api_url">http://suchary.jakubchmura.pl/api/</string>
    <string name="api_url_dev">http://suchary.jakubchmura.pl/api/</string>
    <string name="site_url">http://suchary.jakubchmura.pl/</string>
    <string name="site_url_dev">http://suchary.jakubchmura.pl/</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>

</resources>
