<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context="pl.jakubchmura.suchary.android.about.AboutActivity.AboutFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            style="@style/about_title"
            android:id="@+id/about_application_title"
            android:text="@string/about_application_title"
            android:textAppearance="@style/TextAppearance.About.Title"
            android:layout_marginTop="0dp"/>

        <TextView
            style="@style/about_description"
            android:id="@+id/about_application"
            android:text="@string/about_application"
            android:layout_below="@+id/about_application_title"
            android:textAppearance="@style/TextAppearance.About.Description" />

        <TextView
            style="@style/about_title"
            android:text="@string/about_author_title"
            android:id="@+id/about_author_title"
            android:layout_below="@+id/about_application"
            android:textAppearance="@style/TextAppearance.About.Title" />

        <RelativeLayout
            android:id="@+id/about_author_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_author_title"
            android:layout_marginTop="-3dp">

            <TextView
                android:id="@+id/about_author"
                android:text="@string/about_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.About.Description"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <TextView
            style="@style/about_title"
            android:id="@+id/about_libraries_title"
            android:text="@string/about_libraries_title"
            android:layout_below="@+id/about_author_description"
            android:textAppearance="@style/TextAppearance.About.Title" />

        <TextView
            style="@style/about_description"
            android:id="@+id/about_libraries"
            android:text="@string/about_libraries"
            android:layout_below="@+id/about_libraries_title"
            android:textAppearance="@style/TextAppearance.About.Description"
            android:lineSpacingMultiplier="1.2"
            android:singleLine="false" />

    </RelativeLayout>
</ScrollView>