<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:textColor="@color/date_expand"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/share"
        android:layout_width="@dimen/card_expand_button_width"
        android:layout_height="@dimen/card_expand_button_height"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="right"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:contentDescription="@string/joke_share"
        android:scaleType="fitCenter"
        android:src="@drawable/share_button_dark" />

    <ImageView
        android:id="@+id/source"
        android:layout_width="@dimen/card_expand_button_width"
        android:layout_height="@dimen/card_expand_button_height"
        android:layout_alignParentEnd="false"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/share"
        android:clickable="true"
        android:contentDescription="@string/joke_source"
        android:src="@drawable/site_button_dark" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="@dimen/card_expand_button_width"
        android:layout_height="@dimen/card_expand_button_height"
        android:layout_alignParentEnd="false"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/source"
        android:clickable="true"
        android:contentDescription="@string/joke_star"
        android:src="@drawable/star_button_dark" />

</RelativeLayout>